# computacaoGrafica

./: .gitignore  README.md
CanvasJ/: CMakeLists.txt  main.cpp
CanvasJ/src/: Component.cpp  Component.h  Rect.cpp  Rect.h  Window.cpp  Window.h  gl_canvas2d.cpp  gl_canvas2d.h
FileUtils/: CMakeLists.txt  main.cpp
FileUtils/src/: File.cpp  File.h
canvasGraphics/: CMakeLists.txt  README.txt  main.cpp
canvasGraphics/src/: File.cpp  File.h  gl_canvas2d.cpp  gl_canvas2d.h
gl_4_canvasQT/: CanvasQT.pro  README.txt  curve.cpp  curve.h  glCanvas2d.h  line.cpp  line.h  main.cpp  mainwindow.cpp  mainwindow.h  myCanvas.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h
jv-paint/: glcanvas2d.cpp  glcanvas2d.h  jv-paint.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  mycanvas.cpp
jvmarques/: jvmarques.cbp  jvmarques.depend  main.cpp
jvmarques/include/: File.h  Point.h
jvmarques/src/: File.cpp  gl_canvas2d.cpp
t1-jvmarques/: README.txt  jvmarques.layout  main.cpp
t2-marques/: CanvasQT.pro  CanvasQT.pro.user.35229b3  CanvasQT.pro.user.45bc981  __Manual_QT.doc  curve.cpp  curve.h  line.cpp  mainwindow.cpp  mainwindow.h  myCanvas.cpp  point.cpp  rectangle.cpp  shape.cpp
t3-jvmarques/: CanvasQT.pro  cube.cpp  cube.h  cylinder.cpp  cylinder.h  glCanvas2d.cpp  glCanvas2d.h  mainwindow.cpp  mainwindow.h  myCanvas.cpp  point.cpp  point.h  point3d.cpp  point3d.h  solid.cpp  solid.h
t4/: CMakeLists.txt  main.cpp
testeCanvas2D/: CMakeLists.txt
testeCanvas2D/src/: Bola.h  gl_canvas2d.cpp  main.cpp
(+3 files in other folders)
